--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,6 +4,7 @@
 <section id="{{ page.title }}" class="container content-section text-center">
   <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
+	  <body background="namek_water.jpg">
         {{ page.content | markdownify }}
       </div>
   </div>
